--- a/ctf/webserver/frontend/assets/css/main.css
+++ b/ctf/webserver/frontend/assets/css/main.css
@@ -1292,7 +1292,7 @@
 		-ms-flex-direction: column;
 		flex-direction: column;
 		padding: 8em 0 6em 0;
-		background-image: url("../../images/banner.jpg");
+		background-image: url("../../images/hf10-banner.png");
 		background-size: cover;
 		background-position: center;
 		background-attachment: fixed;
@@ -1377,7 +1377,7 @@
 				padding: 0 0.5em 0.25em 0.5em;
 				border-bottom: solid 2px #ffffff;
 				font-weight: 200;
-				font-family: "Pacifico", cursive;
+				font-family: "VT323", cursive;
 				text-transform: none;
 				letter-spacing: 0;
 			}
